[gd_scene load_steps=2 format=2]

[ext_resource path="res://project/entities/EntityStatusEffectHandler.gd" type="Script" id=1]

[node name="EntityStatusEffectHandler" type="Node"]
script = ExtResource( 1 )

[node name="OnFireExtinguishTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FireDamageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="OnFireExtinguishTimer" to="." method="_on_OnFireExtinguishTimer_timeout"]
[connection signal="timeout" from="FireDamageTimer" to="." method="_on_FireDamageTimer_timeout"]
